--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 
 <body>
 <h1>Hello World!</h1>
+<img src="http://img4.imgtn.bdimg.com/it/u=1847546290,4036060054&fm=11&gp=0.jpg"/>
 </body>
 </html>
